Добавлена поддержка библиотеки flyonui для улучшения стилизации и функциональности интерфейса. Обновлены конфигурации Tailwind и стили для интеграции новых компонентов. Реализованы новые функции для управления раскрывающимися элементами в интерфейсе, улучшена структура кода в контроллерах и шаблонах.

--- a/assets/admin/styles.css
+++ b/assets/admin/styles.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "flyonui";
+@import "flyonui/variants.css";
+@source "../node_modules/flyonui/flyonui.js"; 
 
 @layer base {
   :root {
