--- a/templates/catalog/category/show.html.twig
+++ b/templates/catalog/category/show.html.twig
@@ -23,109 +23,16 @@
         data-facets-facets-url-value="{{ path('catalog_facets') }}?category={{ category.id }}"
       >
         <aside class="md:col-span-1">
-          <div class="facets-panel border rounded p-3">
-            <div data-facets-target="list" class="space-y-3" data-initial-facets='{{ initial_facets_json|default("")|raw }}'></div>
+          <div class="facets-panel py-3">
+            <div data-facets-target="list" data-initial-facets='{{ initial_facets_json|default("")|raw }}'></div>
           </div>
 
-          {# CUSTOM FILTERS #}
-          <div class="border-t border-gray-200 px-4 py-6">
-              <h3 class="-mx-2 -my-3 flow-root">
-                <button type="button" command="--toggle" commandfor="filter-section-mobile-color" class="flex w-full items-center justify-between bg-white px-2 py-3 text-gray-400 hover:text-gray-500" aria-expanded="false" aria-controls="filter-section-mobile-color">
-                  <span class="font-medium text-gray-900">Color</span>
-                  <span class="ml-6 flex items-center">
-                    <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 in-aria-expanded:hidden">
-                      <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z"></path>
-                    </svg>
-                    <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 not-in-aria-expanded:hidden">
-                      <path d="M4 10a.75.75 0 0 1 .75-.75h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 10Z" clip-rule="evenodd" fill-rule="evenodd"></path>
-                    </svg>
-                  </span>
-                </button>
-              </h3>
-              <el-disclosure id="filter-section-mobile-color" class="block pt-6" hidden="">
-                <div class="space-y-6">
-                  <div class="flex gap-3">
-                    <div class="flex h-5 shrink-0 items-center">
-                      <div class="group grid size-4 grid-cols-1">
-                        <input id="filter-mobile-color-0" type="checkbox" name="color[]" value="white" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-indigo-600 checked:bg-indigo-600 indeterminate:border-indigo-600 indeterminate:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 forced-colors:appearance-auto">
-                        <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25">
-                          <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100"></path>
-                          <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <label for="filter-mobile-color-0" class="min-w-0 flex-1 text-gray-500">White</label>
-                  </div>
-                  <div class="flex gap-3">
-                    <div class="flex h-5 shrink-0 items-center">
-                      <div class="group grid size-4 grid-cols-1">
-                        <input id="filter-mobile-color-1" type="checkbox" name="color[]" value="beige" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-indigo-600 checked:bg-indigo-600 indeterminate:border-indigo-600 indeterminate:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 forced-colors:appearance-auto">
-                        <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25">
-                          <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100"></path>
-                          <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <label for="filter-mobile-color-1" class="min-w-0 flex-1 text-gray-500">Beige</label>
-                  </div>
-                  <div class="flex gap-3">
-                    <div class="flex h-5 shrink-0 items-center">
-                      <div class="group grid size-4 grid-cols-1">
-                        <input id="filter-mobile-color-2" type="checkbox" name="color[]" value="blue" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-indigo-600 checked:bg-indigo-600 indeterminate:border-indigo-600 indeterminate:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 forced-colors:appearance-auto">
-                        <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25">
-                          <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100"></path>
-                          <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <label for="filter-mobile-color-2" class="min-w-0 flex-1 text-gray-500">Blue</label>
-                  </div>
-                  <div class="flex gap-3">
-                    <div class="flex h-5 shrink-0 items-center">
-                      <div class="group grid size-4 grid-cols-1">
-                        <input id="filter-mobile-color-3" type="checkbox" name="color[]" value="brown" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-indigo-600 checked:bg-indigo-600 indeterminate:border-indigo-600 indeterminate:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 forced-colors:appearance-auto">
-                        <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25">
-                          <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100"></path>
-                          <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <label for="filter-mobile-color-3" class="min-w-0 flex-1 text-gray-500">Brown</label>
-                  </div>
-                  <div class="flex gap-3">
-                    <div class="flex h-5 shrink-0 items-center">
-                      <div class="group grid size-4 grid-cols-1">
-                        <input id="filter-mobile-color-4" type="checkbox" name="color[]" value="green" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-indigo-600 checked:bg-indigo-600 indeterminate:border-indigo-600 indeterminate:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 forced-colors:appearance-auto">
-                        <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25">
-                          <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100"></path>
-                          <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <label for="filter-mobile-color-4" class="min-w-0 flex-1 text-gray-500">Green</label>
-                  </div>
-                  <div class="flex gap-3">
-                    <div class="flex h-5 shrink-0 items-center">
-                      <div class="group grid size-4 grid-cols-1">
-                        <input id="filter-mobile-color-5" type="checkbox" name="color[]" value="purple" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-indigo-600 checked:bg-indigo-600 indeterminate:border-indigo-600 indeterminate:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 forced-colors:appearance-auto">
-                        <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25">
-                          <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100"></path>
-                          <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <label for="filter-mobile-color-5" class="min-w-0 flex-1 text-gray-500">Purple</label>
-                  </div>
-                </div>
-              </el-disclosure>
-            </div>
-        {# CUSTOM FILTERS #}
         </aside>
         <div class="md:col-span-3">
           <div class="mb-4" data-facets-target="selected" aria-live="polite"></div>
           <div class="mb-4 flex items-center gap-2">
             <label for="limit-select" class="text-sm text-gray-600">Показывать по:</label>
-            <select id="limit-select" class="border rounded px-2 py-1" data-facets-target="limit" data-action="change->facets#onLimitChange">
+            <select id="limit-select" class="select max-w-40 appearance-none" aria-label="select" data-facets-target="limit" data-action="change->facets#onLimitChange">
               {% for l in allowedLimits|default([10,20,30]) %}
                 <option value="{{ l }}" {% if (limit|default(20)) == l %}selected{% endif %}>{{ l }}</option>
               {% endfor %}
